loginlayout bugfix

--- a/src/layouts/LoginLayout.css
+++ b/src/layouts/LoginLayout.css
@@ -1,24 +1,25 @@
-*{
+* {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
 }
 
-#mainContainer{
+#mainContainer {
     background-image: url("../assets/arkaplan.jpg");
     width: 100%;
     height: 100%;
 }
 
-#logo{
+#logo {
     width: 200px;
     margin: 40px 0px 0px 45px;
 }
 
-#body{
+#body {
     max-width: 450px;
-    height: 83vh;
+    height: 660px;
+    min-height: 660px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -28,7 +29,7 @@
     position: relative;
 }
 
-#footer{
+#footer {
     background-color: #0c0e0f;
     opacity: 0.8;
     width: 100%;
@@ -36,19 +37,18 @@
     height: 250px;
 }
 
-#desc{
+#desc {
     display: flex;
     flex-direction: column;
     padding-top: 50px;
 }
 
-#descTelNo{
+#descTelNo {
     display: flex;
     justify-content: space-evenly;
-
 }
 
-#SSS{
+#SSS {
     display: flex;
     justify-content: space-evenly;
     padding-top: 60px;
